welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: type INt
  var cpt1 : INt =0
             ^Program:7: error: type mismatch;
 found   : Unit
 required: Int
    for (cpt <- 1 to nbPas) {
             ^Program:12: error: type mismatch;
 found   : Unit
 required: Int
    for (cpt1 <- 1 to nbPas) {
              ^