welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas : Int, versLAvant : Boolean) : Int = {
  var cpt : Int =0
  var cpt1 : INt =0
  
  if (versLAvant == true) {
    for (cpt <- 1 to nbPas) {
      avance()
    }  
  }
  else {
    for (cpt1 <- 1 to nbPas) {
    	recule(nbPas)
  	}
	}
}